# leptos-icons

./: Cargo.toml  index.html  tailwind.config.js  tailwind.css
src/: main.rs
src/icons/: class.rs  colors.rs  icon.rs  icons.rs  mod.rs
